Implement JoinDiscountPolicies, RemoveDiscountPolicy